<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:hint="@string/name"
                android:inputType="textCapWords"
                />

            <TextView
                style="@style/Custom"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/toppings" />

            <CheckBox
                android:id="@+id/cream_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/whipped_cream"
                android:paddingLeft="15dp"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/chocolate"
                android:paddingLeft="15dp"
                android:textSize="20sp"
                />

            <TextView
                style="@style/Custom"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:text="Quantity"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:onClick="decrement"
                    android:text="@string/minus"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="increment"
                    android:text="@string/plus"
                    android:textSize="20sp" />

            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>